# MATH

./: CMakeLists.txt  Function.cpp  Function.h  Math.h  Number.h  Set.cpp  Set.h  library.h  main.cpp
